--- a/gdatabase/src/main/res/values/strings.xml
+++ b/gdatabase/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
-<resources>
-    <string name="text_appName">My Library</string>
+<resources xmlns:tools="http://schemas.android.com/tools"
+           tools:ignore="ResourceName">
+    <string name="library_name">GDatabase</string>
 </resources>
